--- a/desafio/android/app/build.gradle
+++ b/desafio/android/app/build.gradle
@@ -50,6 +50,7 @@ android {
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -70,6 +71,8 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:28.3.1')
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'androidx.multidex:multidex: 2.0.1'
+
 
 
 }
