--- a/desafio/pubspec.yaml
+++ b/desafio/pubspec.yaml
@@ -27,9 +27,15 @@ environment:
 dependencies:
   firebase_auth: 
   firebase_crashlytics:
+  cloud_firestore: 
   firebase_core: 
   flutter_map: any
   latlng:
+  flutter_map_location:
+  # map_controller:
+  #   git:
+  #     url: https://github.com/joflee/map_controller.git
+  #     ref: master
 
   flutter:
     sdk: flutter
